--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
   /* margin-right: 10px  */;
   /* margin: 0 0 0 1000px; */
   /* margin: 0 0 0 100px; */
-  /* margin-right: 10px !important  */;
-  margin-left:400px !important;
+  margin-right: 100px !important;
+  /* margin-left:400px !important; */
 }
 .topLogo{
   font-family: Sans-Serif;
