--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
-
+.awewaylogo{
+  width: 100px;
+  height: 50px;
+  margin-left:300px ;
+  margin-top: 13px;
+}
+.rtdc-logo{
+  width: 100px;
+  height: 100px;
+}
 #loginBtn{
-  /* background-color: white !important; */
-  /* margin-right: 10px  */;
-  /* margin: 0 0 0 1000px; */
-  /* margin: 0 0 0 100px; */
-  margin-right: 100px !important;
-  /* margin-left:400px !important; */
+  border-radius: 30px !important;
+  width: 150px;
 }
-.topLogo{
-  font-family: Sans-Serif;
-  color: darkblue;
-  margin-left: 30px;
-  /* padding-top: 12.5px ; */
-  margin-top: 12px;
-}
-.fo{
-  font-family: Courier New;
-  color: #fffff; 
+.rtdc-cover{
+  /* size: cover; */
+  width: 100%;
+  height: 100%;
 }
