--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 .awewaylogo{
-  width: 100px;
-  height: 50px;
-  margin-left:300px ;
-  margin-top: 13px;
+  width: 100px !important;
+  height: 50px !important;
+  margin-left:300px !important;
+  margin-top: 13px !important;
 }
 .rtdc-logo{
-  width: 100px;
-  height: 100px;
+  width: 100px!important;
+  height: 100px!important;
 }
 #loginBtn{
   border-radius: 30px !important;
-  width: 150px;
+  width: 150px!important;
 }
 .rtdc-cover{
   /* size: cover; */
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% ;
 }
