--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .awewaylogo{
   width: 100px !important;
   height: 50px !important;
-  margin-left:300px !important;
+  margin-left:280px !important;
   margin-top: 13px !important;
 }
 .rtdc-logo{
@@ -15,5 +15,5 @@
 .rtdc-cover{
   /* size: cover; */
   width: 100% !important;
-  height: 100% ;
+  height: 100% !important;
 }
