--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ height: 100% !important;
 .text{
   color: darkblue !important;
   margin-top:38px !important;
-  margin-left: 218px !important;
+  margin-left: 220px !important;
   margin-right:5px !important ;
+}
+.pragraph{
+  /* text-align: center; */
+  /* justify-items: center; */
+  justify-content: space-between;
+  margin: 40px 40px 0 60px !important;
 }
