--- a/style.css
+++ b/style.css
@@ -35,3 +35,13 @@ height: 100% !important;
   justify-content: space-between;
   margin: 40px 40px 0 60px !important;
 }
+.llc-logo{
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+  margin-left: 20px;
+}
+.llc-logo-frame{
+  display: flex;
+}
